Fixed layout issue in linkset editor

--- a/src/css/boom/linkset-editor.less
+++ b/src/css/boom/linkset-editor.less
@@ -144,7 +144,6 @@
         position: absolute;
         left: calc(~"100% + 1.5rem");
         top: -1.5rem;
-        bottom: -1.5rem;
         left: calc(~"100% + 1.5rem");
         width: calc(~"100% + 3rem");
         transition: left 0.5s;
@@ -164,7 +163,7 @@
         .back {
             position: absolute;
             top: 0;
-            bottom: 0;
+            bottom: -3rem;
             left: 0;
             width: 5rem;
             overflow: hidden;
